Update generated content

--- a/home.html
+++ b/home.html
@@ -179,6 +179,33 @@
     ]
   },
   {
+    "title": "Kiến nghị giảm phân biệt giữa khám dịch vụ và BHYT",
+    "content": "Cử tri Vĩnh Long đã kiến nghị giảm sự phân biệt giữa khám dịch vụ và khám bảo hiểm y tế (BHYT) do thời gian chờ đợi lâu và không được chọn bác sĩ khi khám BHYT. Bộ trưởng Y tế Đào Hồng Lan đã ghi nhận thực trạng này, đồng thời khẳng định pháp luật không cho phép phân biệt giữa hai loại hình khám chữa bệnh. Để cải thiện tình hình, Bộ Y tế đang triển khai các biện pháp nâng cao chất lượng dịch vụ BHYT và giảm thời gian chờ đợi cho bệnh nhân.",
+    "link": "https://vnexpress.net/kien-nghi-giam-phan-biet-giua-kham-dich-vu-va-bhyt-4861049.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao cử tri Vĩnh Long lại kiến nghị giảm phân biệt giữa khám dịch vụ và BHYT?",
+    "answers": [
+      {
+        "text": "Vì thời gian chờ đợi lâu và không được chọn bác sĩ khi khám BHYT.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ muốn khám bệnh nhanh hơn mà không cần BHYT.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không tin tưởng vào chất lượng khám BHYT.",
+        "correct": false
+      },
+      {
+        "text": "Vì chi phí khám dịch vụ quá cao và họ không đủ khả năng chi trả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
     "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
@@ -527,33 +554,6 @@
     ]
   },
   {
-    "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
-    "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
-    "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Khó thở sau khi khỏi cúm A có phải do phổi chưa hồi phục không?",
-    "answers": [
-      {
-        "text": "Có, phổi có thể chưa hồi phục hoàn toàn.",
-        "correct": true
-      },
-      {
-        "text": "Không, khó thở không liên quan đến cúm A.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng không cần khám phổi.",
-        "correct": false
-      },
-      {
-        "text": "Có, chỉ cần nghỉ ngơi là đủ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
     "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
     "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
@@ -576,6 +576,33 @@
       },
       {
         "text": "Khi trẻ bị viêm phổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
+    "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
+    "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Khó thở sau khi khỏi cúm A có phải do phổi chưa hồi phục không?",
+    "answers": [
+      {
+        "text": "Có, phổi có thể chưa hồi phục hoàn toàn.",
+        "correct": true
+      },
+      {
+        "text": "Không, khó thở không liên quan đến cúm A.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng không cần khám phổi.",
+        "correct": false
+      },
+      {
+        "text": "Có, chỉ cần nghỉ ngơi là đủ.",
         "correct": false
       }
     ]
@@ -2219,28 +2246,28 @@
     ]
   },
   {
-    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
-    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
-    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
-    "cat": "phap-luat",
-    "positivity": 1,
+    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
+    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
+    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
     "importance": 7,
-    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
+    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
     "answers": [
       {
-        "text": "Vì lái xe khi bị tước bằng lái",
+        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
         "correct": true
       },
       {
-        "text": "Vì vi phạm quy định giao thông khác",
+        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
         "correct": false
       },
       {
-        "text": "Vì không có bảo hiểm xe",
+        "text": "Vì muốn tập ở không gian đông đúc.",
         "correct": false
       },
       {
-        "text": "Vì lái xe trong tình trạng say xỉn",
+        "text": "Vì không có thời gian để tập luyện.",
         "correct": false
       }
     ]
@@ -2304,28 +2331,28 @@
     ]
   },
   {
-    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
-    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
-    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
+    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
+    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
+    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
+    "cat": "phap-luat",
+    "positivity": 1,
     "importance": 7,
-    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
+    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
     "answers": [
       {
-        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
+        "text": "Vì lái xe khi bị tước bằng lái",
         "correct": true
       },
       {
-        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
+        "text": "Vì vi phạm quy định giao thông khác",
         "correct": false
       },
       {
-        "text": "Vì muốn tập ở không gian đông đúc.",
+        "text": "Vì không có bảo hiểm xe",
         "correct": false
       },
       {
-        "text": "Vì không có thời gian để tập luyện.",
+        "text": "Vì lái xe trong tình trạng say xỉn",
         "correct": false
       }
     ]
@@ -3255,33 +3282,6 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
-    "answers": [
-      {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Vì tiêm vaccine là bắt buộc.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm cân.",
-        "correct": false
-      },
-      {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
     "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
@@ -3304,6 +3304,33 @@
       },
       {
         "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "answers": [
+      {
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Vì tiêm vaccine là bắt buộc.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm cân.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -3448,28 +3475,28 @@
     ]
   },
   {
-    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
-    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
-    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
-    "cat": "the-thao",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
     "answers": [
       {
-        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
+        "text": "Bank Negara Indonesia (BNI)",
         "correct": true
       },
       {
-        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
+        "text": "Ngân hàng Trung ương Indonesia",
         "correct": false
       },
       {
-        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
+        "text": "Ngân hàng Thế giới",
         "correct": false
       },
       {
-        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
+        "text": "Ngân hàng Phát triển Châu Á",
         "correct": false
       }
     ]
@@ -3502,28 +3529,28 @@
     ]
   },
   {
-    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
-    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
-    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
+    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
+    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
     "answers": [
       {
-        "text": "Bank Negara Indonesia (BNI)",
+        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
         "correct": true
       },
       {
-        "text": "Ngân hàng Trung ương Indonesia",
+        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
         "correct": false
       },
       {
-        "text": "Ngân hàng Thế giới",
+        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
         "correct": false
       },
       {
-        "text": "Ngân hàng Phát triển Châu Á",
+        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
         "correct": false
       }
     ]
@@ -4165,33 +4192,6 @@
       },
       {
         "text": "Rửa bằng xà phòng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vụ Thùy Tiên, Quang Linh Vlogs quảng cáo kẹo rau: Sở Văn hóa lên tiếng",
-    "content": "Sở Văn hóa và Thể thao TPHCM đã lên tiếng về vụ quảng cáo kẹo rau củ của Hoa hậu Thùy Tiên, YouTuber Quang Linh Vlogs, và TikToker Hằng Du Mục. Họ xác nhận đã tiếp nhận thông tin và đang phối hợp với Cục An toàn thực phẩm để kiểm tra chất lượng và tính hợp pháp của sản phẩm. Trước đó, sản phẩm này đã bị chỉ trích vì quảng cáo không đúng sự thật, khiến các nghệ sĩ liên quan phải xin lỗi khán giả.",
-    "link": "https://dantri.com.vn/giai-tri/vu-thuy-tien-quang-linh-vlogs-quang-cao-keo-rau-so-van-hoa-len-tieng-20250313145022201.htm",
-    "cat": "giai-tri",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Sở Văn hóa và Thể thao TPHCM đã có phản hồi gì về vụ quảng cáo kẹo rau củ của Thùy Tiên và Quang Linh Vlogs?",
-    "answers": [
-      {
-        "text": "Đang phối hợp kiểm tra và xử lý vi phạm",
-        "correct": true
-      },
-      {
-        "text": "Đã xác nhận chất lượng sản phẩm",
-        "correct": false
-      },
-      {
-        "text": "Không có thông tin gì",
-        "correct": false
-      },
-      {
-        "text": "Đã dừng quảng cáo ngay lập tức",
         "correct": false
       }
     ]
