Update generated content

--- a/home.html
+++ b/home.html
@@ -264,6 +264,33 @@
     ]
   },
   {
+    "title": "Xe biển trắng chạy dịch vụ bị phạt như thế nào?",
+    "content": "Xe biển trắng khi tham gia chạy dịch vụ sẽ bị xử phạt theo quy định của pháp luật. Mức phạt cụ thể sẽ tùy thuộc vào từng trường hợp vi phạm, nhưng thông thường có thể lên đến hàng triệu đồng. Các chủ xe cần lưu ý rằng việc sử dụng xe biển trắng để kinh doanh mà không đăng ký sẽ dẫn đến các biện pháp xử lý nghiêm khắc từ cơ quan chức năng.",
+    "link": "https://vnexpress.net/xe-bien-trang-chay-dich-vu-bi-phat-nhu-the-nao-4861365.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Xe biển trắng chạy dịch vụ sẽ bị phạt như thế nào?",
+    "answers": [
+      {
+        "text": "Xe biển trắng chạy dịch vụ sẽ bị phạt tiền từ 2 triệu đến 4 triệu đồng.",
+        "correct": true
+      },
+      {
+        "text": "Xe biển trắng sẽ không bị phạt nếu đăng ký hợp lệ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu có tai nạn xảy ra.",
+        "correct": false
+      },
+      {
+        "text": "Mức phạt là tối đa 500.000 đồng cho mỗi chuyến.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Arsenal được dự đoán rút ngắn cách biệt với Liverpool ở Ngoại hạng Anh",
     "content": "Cựu tiền đạo Chris Sutton dự đoán Arsenal sẽ thắng Chelsea 1-0 trong trận đấu vòng 29 Ngoại hạng Anh, đồng thời tin rằng đội bóng này sẽ rút ngắn khoảng cách với Liverpool. Ông cho rằng Declan Rice sẽ ghi bàn với phong độ tốt của mình, trong khi Chelsea đang gặp khó khăn. Dự đoán này được đưa ra trong bối cảnh Liverpool đang thi đấu tại chung kết Cup Liên đoàn.",
     "link": "https://vnexpress.net/arsenal-duoc-du-doan-rut-ngan-cach-biet-voi-liverpool-o-ngoai-hang-anh-4861300.html",
@@ -670,33 +697,6 @@
     ]
   },
   {
-    "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
-    "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
-    "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Khi nào trẻ cần phẫu thuật nạo VA?",
-    "answers": [
-      {
-        "text": "Khi trẻ viêm VA tái phát trên 6 lần mỗi năm.",
-        "correct": true
-      },
-      {
-        "text": "Khi trẻ bị cảm lạnh thông thường.",
-        "correct": false
-      },
-      {
-        "text": "Khi trẻ có triệu chứng đau họng nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Khi trẻ bị viêm phổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
     "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
     "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
@@ -719,6 +719,33 @@
       },
       {
         "text": "Có, chỉ cần nghỉ ngơi là đủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
+    "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
+    "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Khi nào trẻ cần phẫu thuật nạo VA?",
+    "answers": [
+      {
+        "text": "Khi trẻ viêm VA tái phát trên 6 lần mỗi năm.",
+        "correct": true
+      },
+      {
+        "text": "Khi trẻ bị cảm lạnh thông thường.",
+        "correct": false
+      },
+      {
+        "text": "Khi trẻ có triệu chứng đau họng nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Khi trẻ bị viêm phổi.",
         "correct": false
       }
     ]
@@ -2362,6 +2389,33 @@
     ]
   },
   {
+    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
+    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
+    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "answers": [
+      {
+        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "correct": true
+      },
+      {
+        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "correct": false
+      },
+      {
+        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "correct": false
+      },
+      {
+        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "'Quả bom' dân số già của Malaysia",
     "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
     "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
@@ -2388,33 +2442,6 @@
       },
       {
         "text": "Chăm sóc trẻ em",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
-    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
-    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 7,
-    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
-    "answers": [
-      {
-        "text": "Vì lái xe khi bị tước bằng lái",
-        "correct": true
-      },
-      {
-        "text": "Vì vi phạm quy định giao thông khác",
-        "correct": false
-      },
-      {
-        "text": "Vì không có bảo hiểm xe",
-        "correct": false
-      },
-      {
-        "text": "Vì lái xe trong tình trạng say xỉn",
         "correct": false
       }
     ]
@@ -2447,28 +2474,28 @@
     ]
   },
   {
-    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
-    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
-    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
+    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
+    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
+    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
+    "cat": "phap-luat",
+    "positivity": 1,
     "importance": 7,
-    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
     "answers": [
       {
-        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "text": "Vì lái xe khi bị tước bằng lái",
         "correct": true
       },
       {
-        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "text": "Vì vi phạm quy định giao thông khác",
         "correct": false
       },
       {
-        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "text": "Vì không có bảo hiểm xe",
         "correct": false
       },
       {
-        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
+        "text": "Vì lái xe trong tình trạng say xỉn",
         "correct": false
       }
     ]
@@ -2644,33 +2671,6 @@
     ]
   },
   {
-    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
-    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
-    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
-    "answers": [
-      {
-        "text": "Gần 7.000 tỷ đồng",
-        "correct": true
-      },
-      {
-        "text": "Trên 5.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Dưới 6.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Khoảng 10.000 tỷ đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
     "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
     "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
@@ -2693,6 +2693,33 @@
       },
       {
         "text": "Do không có khách du lịch đến thăm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
+    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
+    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
+    "answers": [
+      {
+        "text": "Gần 7.000 tỷ đồng",
+        "correct": true
+      },
+      {
+        "text": "Trên 5.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Dưới 6.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 10.000 tỷ đồng",
         "correct": false
       }
     ]
@@ -3371,33 +3398,6 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
-    "answers": [
-      {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Vì tiêm vaccine là bắt buộc.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm cân.",
-        "correct": false
-      },
-      {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
     "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
     "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
@@ -3420,6 +3420,33 @@
       },
       {
         "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "answers": [
+      {
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Vì tiêm vaccine là bắt buộc.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm cân.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -3591,6 +3618,33 @@
     ]
   },
   {
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "answers": [
+      {
+        "text": "Bank Negara Indonesia (BNI)",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng Trung ương Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thế giới",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Phát triển Châu Á",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
     "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
     "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
@@ -3640,33 +3694,6 @@
       },
       {
         "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
-    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
-    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
-    "answers": [
-      {
-        "text": "Bank Negara Indonesia (BNI)",
-        "correct": true
-      },
-      {
-        "text": "Ngân hàng Trung ương Indonesia",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Thế giới",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Phát triển Châu Á",
         "correct": false
       }
     ]
