--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -139,6 +139,33 @@
     ]
   },
   {
+    "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
+    "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
+    "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao chị Liên lại bị béo phì nhưng vẫn suy dinh dưỡng?",
+    "answers": [
+      {
+        "text": "Vì chế độ ăn kiêng quá khắc nghiệt dẫn đến thiếu dinh dưỡng.",
+        "correct": true
+      },
+      {
+        "text": "Chị Liên không tập thể dục.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ ăn của chị Liên hoàn toàn bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "5 sai lầm thường gặp khi rửa rau quả",
     "content": "Bài viết nêu rõ năm sai lầm phổ biến khi rửa rau củ quả có thể dẫn đến vi khuẩn và hóa chất còn lại, gây hại cho sức khỏe. Đầu tiên, rau hữu cơ cũng cần được rửa sạch để loại bỏ bụi bẩn và vi khuẩn. Thứ hai, không vệ sinh mặt bàn bếp trước khi rửa rau có thể gây ô nhiễm chéo. Thứ ba, việc không rửa tay sau khi xử lý thực phẩm sống có thể làm lây lan vi khuẩn. Thứ tư, rau củ có vỏ cứng cũng cần được rửa để tránh lây nhiễm. Cuối cùng, sử dụng nước lạnh và bàn chải mềm là cách hiệu quả nhất để làm sạch rau củ quả.",
     "link": "https://vnexpress.net/5-sai-lam-thuong-gap-khi-rua-rau-qua-4860989.html",
@@ -313,6 +340,33 @@
     ]
   },
   {
+    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
+    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người mắc sốt xuất huyết có nên tắm không?",
+    "answers": [
+      {
+        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên tắm.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có thể tắm nhưng không được gãi mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu khi đi bộ cảnh báo bệnh tiểu đường",
     "content": "Bài viết nêu rõ những dấu hiệu khi đi bộ có thể cảnh báo bệnh tiểu đường, bao gồm cảm giác tê, ngứa ran, chuột rút ở chân, mệt mỏi bất thường và sưng ở bàn chân. Những triệu chứng này có thể do bệnh thần kinh ngoại biên hoặc bệnh động mạch ngoại biên do tiểu đường gây ra. Việc phát hiện sớm những dấu hiệu này rất quan trọng để kiểm soát bệnh tiểu đường hiệu quả.",
     "link": "https://vnexpress.net/dau-hieu-khi-di-bo-canh-bao-benh-tieu-duong-4861192.html",
@@ -339,33 +393,6 @@
       },
       {
         "text": "Nôn mửa và tiêu chảy",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
-    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người mắc sốt xuất huyết có nên tắm không?",
-    "answers": [
-      {
-        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên tắm.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có thể tắm nhưng không được gãi mạnh.",
         "correct": false
       }
     ]
@@ -2353,33 +2380,6 @@
     ]
   },
   {
-    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
-    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
-    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
-    "answers": [
-      {
-        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
-        "correct": true
-      },
-      {
-        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tập ở không gian đông đúc.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có thời gian để tập luyện.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
     "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
     "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
@@ -2402,6 +2402,33 @@
       },
       {
         "text": "Vì lái xe trong tình trạng say xỉn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
+    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
+    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
+    "answers": [
+      {
+        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
+        "correct": true
+      },
+      {
+        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tập ở không gian đông đúc.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có thời gian để tập luyện.",
         "correct": false
       }
     ]
@@ -2635,33 +2662,6 @@
     ]
   },
   {
-    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
-    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
-    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
-    "answers": [
-      {
-        "text": "Gần 7.000 tỷ đồng",
-        "correct": true
-      },
-      {
-        "text": "Trên 5.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Dưới 6.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Khoảng 10.000 tỷ đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
     "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
     "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
@@ -2684,6 +2684,33 @@
       },
       {
         "text": "Do không có khách du lịch đến thăm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
+    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
+    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
+    "answers": [
+      {
+        "text": "Gần 7.000 tỷ đồng",
+        "correct": true
+      },
+      {
+        "text": "Trên 5.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Dưới 6.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 10.000 tỷ đồng",
         "correct": false
       }
     ]
@@ -3362,28 +3389,28 @@
     ]
   },
   {
-    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
-    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
-    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
+    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
+    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
+    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 8,
     "importance": 9,
-    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
     "answers": [
       {
-        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
         "correct": true
       },
       {
-        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "text": "Chất xơ, đường, muối, protein",
         "correct": false
       },
       {
-        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "text": "Vitamin D, canxi, sắt, đồng",
         "correct": false
       },
       {
-        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
+        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
         "correct": false
       }
     ]
@@ -3416,28 +3443,28 @@
     ]
   },
   {
-    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
-    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
-    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
     "cat": "suc-khoe",
-    "positivity": 8,
+    "positivity": 7,
     "importance": 9,
-    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
     "answers": [
       {
-        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
         "correct": true
       },
       {
-        "text": "Chất xơ, đường, muối, protein",
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
         "correct": false
       },
       {
-        "text": "Vitamin D, canxi, sắt, đồng",
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
         "correct": false
       },
       {
-        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
         "correct": false
       }
     ]
