--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -610,6 +610,33 @@
     ]
   },
   {
+    "title": "6 vitamin, khoáng chất cần thiết cho não",
+    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
+    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
+    "answers": [
+      {
+        "text": "Vitamin D, B, magie, omega-3, kẽm",
+        "correct": true
+      },
+      {
+        "text": "Vitamin C, D, sắt",
+        "correct": false
+      },
+      {
+        "text": "Canxi, vitamin E, kali",
+        "correct": false
+      },
+      {
+        "text": "Vitamin B, A, kẽm, magie",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Điểm chuẩn, học phí của 5 đại học trọng điểm về kỹ thuật - công nghệ",
     "content": "Bài viết đề cập đến điểm chuẩn và học phí của năm trường đại học công lập trọng điểm về kỹ thuật - công nghệ tại Việt Nam, bao gồm Đại học Bách Khoa Hà Nội, Đại học Xây dựng Hà Nội, Đại học Giao thông vận tải, Học viện Công nghệ Bưu chính Viễn thông và Đại học Sư phạm Kỹ thuật TPHCM. Trong đó, Đại học Bách Khoa Hà Nội có điểm chuẩn cao nhất với mức 28,53 điểm cho ngành Khoa học máy tính. Học phí của các trường này dao động từ 15,6 triệu đến 67 triệu đồng/năm, tùy thuộc vào ngành học và chương trình đào tạo.",
     "link": "https://dantri.com.vn/giao-duc/diem-chuan-hoc-phi-cua-5-dai-hoc-trong-diem-ve-ky-thuat-cong-nghe-20250314153311749.htm",
@@ -2820,6 +2847,37 @@
     ]
   },
   {
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "answers": [
+      {
+        "text": "Già hóa dân số",
+        "correct": true
+      },
+      {
+        "text": "Tỷ lệ sinh tăng",
+        "correct": false
+      },
+      {
+        "text": "Thiếu lao động trẻ",
+        "correct": false
+      },
+      {
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
     "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
     "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
@@ -2842,33 +2900,6 @@
       },
       {
         "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
-    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
-    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 7,
-    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
-    "answers": [
-      {
-        "text": "Vì lái xe khi bị tước bằng lái",
-        "correct": true
-      },
-      {
-        "text": "Vì vi phạm quy định giao thông khác",
-        "correct": false
-      },
-      {
-        "text": "Vì không có bảo hiểm xe",
-        "correct": false
-      },
-      {
-        "text": "Vì lái xe trong tình trạng say xỉn",
         "correct": false
       }
     ]
@@ -2901,32 +2932,28 @@
     ]
   },
   {
-    "title": "'Quả bom' dân số già của Malaysia",
-    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
-    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
+    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
+    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 7,
+    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
     "answers": [
       {
-        "text": "Già hóa dân số",
+        "text": "Vì lái xe khi bị tước bằng lái",
         "correct": true
       },
       {
-        "text": "Tỷ lệ sinh tăng",
+        "text": "Vì vi phạm quy định giao thông khác",
         "correct": false
       },
       {
-        "text": "Thiếu lao động trẻ",
+        "text": "Vì không có bảo hiểm xe",
         "correct": false
       },
       {
-        "text": "Gia tăng tỷ lệ thất nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Chăm sóc trẻ em",
+        "text": "Vì lái xe trong tình trạng say xỉn",
         "correct": false
       }
     ]
@@ -3829,60 +3856,6 @@
     ]
   },
   {
-    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
-    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
-    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
-    "answers": [
-      {
-        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
-        "correct": true
-      },
-      {
-        "text": "Chất xơ, đường, muối, protein",
-        "correct": false
-      },
-      {
-        "text": "Vitamin D, canxi, sắt, đồng",
-        "correct": false
-      },
-      {
-        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
-    "answers": [
-      {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
-        "correct": true
-      },
-      {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thích kết quả thẩm mỹ.",
-        "correct": false
-      },
-      {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
     "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
     "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
@@ -3932,6 +3905,60 @@
       },
       {
         "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
+    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
+    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "answers": [
+      {
+        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "correct": true
+      },
+      {
+        "text": "Chất xơ, đường, muối, protein",
+        "correct": false
+      },
+      {
+        "text": "Vitamin D, canxi, sắt, đồng",
+        "correct": false
+      },
+      {
+        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "answers": [
+      {
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "correct": true
+      },
+      {
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thích kết quả thẩm mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -4049,33 +4076,6 @@
     ]
   },
   {
-    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
-    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
-    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
-    "cat": "the-thao",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
-    "answers": [
-      {
-        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
-        "correct": true
-      },
-      {
-        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
-        "correct": false
-      },
-      {
-        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
-        "correct": false
-      },
-      {
-        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
     "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
     "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
@@ -4098,6 +4098,33 @@
       },
       {
         "text": "Ngân hàng Phát triển Châu Á",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
+    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
+    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
+    "answers": [
+      {
+        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
+        "correct": true
+      },
+      {
+        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
+        "correct": false
+      },
+      {
+        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
+        "correct": false
+      },
+      {
+        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
         "correct": false
       }
     ]
